Load paths from XSPF playlists as UTF-8

The saving code writes them in UTF-8 and the xml header generated states that the
encoding is UTF-8, so they should be definitely also read as UTF-8.

BUG: 435779